# langchain-academy

./: .env.example  .gitignore  README.md  pyproject.toml  setup_dotenv_files.sh
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/: agent.py  router.py  simple.py
module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
module-2/studio/: chatbot.py
module-3/: breakpoints.ipynb  dynamic-breakpoints.ipynb  edit-state-human-feedback.ipynb  streaming-interruption.ipynb  time-travel.ipynb
module-3/studio/: .env.example  agent.py
module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
module-4/studio/: .env.example  map_reduce.py  parallelization.py  research_assistant.py  sub_graphs.py
