[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.21.0",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.44",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.8",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langgraph-cli[inmem]>=0.1.76",
    "langgraph-sdk>=0.1.56",
    "langsmith>=0.3.13",
    "notebook>=7.3.2",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.1",
    "trustcall>=0.0.38",
    "wikipedia>=1.4.0",
]
